SERVER-13666 check that lat/lng are in bounds for near queries even if point is legacy (cherry picked from commit 3286b208b30c43450354422e554070485f526e7b)